@@ -1,6 +1,12 @@
+BEGIN {
+
+  $srcdir = shift;
+
+};
+
 if( /LIBSPECTRUM_SNAP_ACCESSORS/ ) {
 
-  open( DATAFILE, "< snap_accessors.txt" ) or die "Couldn't open `snap_accessors.txt': $!";
+  open( DATAFILE, '<' . "${srcdir}/snap_accessors.txt" ) or die "Couldn't open `snap_accessors.txt': $!";
 
   $_ = '';
   while( <DATAFILE> ) {
@@ -36,7 +42,7 @@ CODE
 
 if( /LIBSPECTRUM_TAPE_ACCESSORS/ ) {
 
-    open( DATAFILE, "< tape_accessors.txt" )
+    open( DATAFILE, '<' . "${srcdir}/tape_accessors.txt" )
 	or die "Couldn't open `tape_accessors.txt': $!";
 
     $_ = '';
