@@ -512,3 +512,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20070724 tape.c: fix stray TZX loop end block causes segfault (fixes bug
 	 #1758860).
 20070724 test/test.c: allow individual tests to be selected.
+20070904 Makefile.am,generate.pl.in: allowing building in directories other
+	 than the main source directory.
